# vgg_sketch_parser

./: .gitignore  CMakeLists.txt  README.md
command_line_tool/: main.cpp
pytest/: common.py  test.py
pytest/src/attr/: test_blur.py  test_border.py  test_color.py  test_color_control_change.py  test_context_settings.py  test_fill.py  test_gradient.py  test_pattern.py  test_shadow.py
pytest/src/object/: test_artboard.py  test_basic_attr.py  test_empty.py  test_group.py  test_image.py  test_mask.py  test_overflow.py  test_path.py  test_symbol.py  test_text.py
src/: CMakeLists.txt  main.cpp
src/analyze_sketch_file/: analyze_sketch_file.cpp  analyze_sketch_file.h
src/basic/: define.h  get_json_value.cpp  get_json_value.hpp  rect.cpp  rect.h
src/extract/: extract.cpp  extract.h
src/sketch_object/: check.hpp  mask.cpp  mask.h
src/sketch_object/attrs/: blur_change.cpp  blur_change.h  border_change.cpp  border_change.h  color_change.cpp  color_change.h  color_control_change.cpp  color_control_change.h  context_settings_change.cpp  context_settings_change.h  data_ref_change.cpp  data_ref_change.h  file_ref_change.cpp  file_ref_change.h  fill_change.cpp  fill_change.h  gradient_change.cpp  gradient_change.h  rect_change.cpp  rect_change.h  shadow_change.cpp  shadow_change.h  style_change.cpp  style_change.h
src/sketch_object/objects/: abstract_group.cpp  abstract_group.h  abstract_layer.cpp  abstract_layer.h  abstract_root.h  abstract_shape.cpp  abstract_shape.h  artboard.cpp  artboard.h  bitmap.cpp  bitmap.h  document.cpp  document.h  page.cpp  page.h  shape_group.cpp  shape_group.h  symbol_instance.cpp  symbol_instance.h  symbol_master.cpp  symbol_master.h  text.cpp  text.h
src/sketch_object/objects/shape/: oval.hpp  polygon.hpp  rectangle.hpp  shape_path.hpp  star.hpp  triangle.hpp
src/sketch_object/utils/: point_string_change.cpp  point_string_change.h
test/: main.cpp
